NIAD-976: Remove ? character from organization names. Refactor RequesterNameAndAddress and PerformerNameAndAddress parsers. Rename cases of organisation to organization.